apiGateway/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080 # Envoy 对外提供服务的 HTTP 端口
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            # 将请求路由到名为 user_service_cluster 的集群
                            cluster: user_service_cluster
                            # 设置一个较长的超时时间
                            timeout: 60s
                http_filters:
                  # gRPC-JSON Transcoder 过滤器
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/etc/envoy/proto.pb"
                      services: ["UserService.v1.UserService"]
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: true

                  # 路由器过滤器，必须放在最后
                  - name: envoy.filters.http.router
                    typed_config:
                      # 在这里为 router 添加正确的 @type
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: user_service_cluster # 集群名称，必须和上面 route.cluster 的值一致
      connect_timeout: 5s
      type: STRICT_DNS   # <--- 在这里添加 discovery type
      # 关键：因为后端是 gRPC 服务，所以必须使用 http2
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: user_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # 使用 docker-compose 中的服务名，而不是 host.docker.internal
                      address: "grpc-dev"  # <--- 修改为服务名
                      # 确保 50051 是你的 grpc-dev 容器内部 gRPC 服务监听的端口
                      port_value: 50051
